manifests/web/vs.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: web-external
  namespace: web
spec:
  hosts:
    - web.127.0.0.1.nip.io
  gateways:
    - istio-ingress/default
  http:
    - route:
        - destination:
            host: web
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: web-mesh
  namespace: web
spec:
  hosts:
    - web
  gateways:
    - mesh
  http:
    - route:
        - destination:
            host: web
